# Ecommerce-AI-Chatbot

./: README.md
apps/web/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/cart/: page.tsx
apps/web/app/chat/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/products/: page.tsx
apps/web/app/products/[id]/: page.tsx
apps/web/app/profile/: page.tsx
apps/web/app/register/: page.tsx
apps/web/components/chat/: ChatInput.tsx  ChatMessage.tsx
apps/web/components/layout/: Footer.tsx  Header.tsx
apps/web/components/products/: ProductCard.tsx  ProductFilters.tsx  ProductGrid.tsx
apps/web/components/ui/: PixelAnimation.tsx  chat-error-boundary.tsx  error-boundary.tsx
apps/web/context/: AuthContext.tsx
apps/web/lib/: api.ts  utils.ts
apps/web/types/: index.ts
server/: .env.example  README.md  app.py  config.py  gunicorn.conf.py  pyproject.toml  requirements.txt  run.py  seed_products.py  start.sh
server/migrations/: env.py
server/migrations/versions/: c42517d8354b_.py
server/models/: __init__.py  cart.py  chat_session.py  message.py  product.py  user.py  user_like.py
server/routes/: __init__.py  auth_routes.py  cart_routes.py  chat_routes.py  like_routes.py  product_routes.py
server/scripts/: index_all_products.py
server/services/: __init__.py  auth_service.py  cart_service.py  chat_service.py  like_service.py  product_service.py  vector_service.py
server/utils/: __init__.py  database_seeder.py  logger_config.py
(+1 files in other folders)
